Reposition background image to be better

--- a/src/site.scss
+++ b/src/site.scss
@@ -52,6 +52,7 @@ footer div.container {
 .background-layer {
   background-image: url("images/DSC_0746_s.jpg");
   background-size: cover;
+  background-position: center;
   width: 100%;
   height: 100%;
   top: 0;
